--- a/furniture_sets/ikea_stefan.yaml
+++ b/furniture_sets/ikea_stefan.yaml
@@ -3,21 +3,31 @@ include: [ikea_parts.yaml]
 parts:
     - type: ikea_wood_pin
       quantity: 14
+      tf_visible: false
     - type: ikea_long_screw
       quantity: 6
+      tf_visible: false
     - type: ikea_short_screw
       quantity: 4
+      tf_visible: false
     - type: ikea_l_bracket
       quantity: 4
+      tf_visible: false
     - type: ikea_stefan_bottom
       quantity: 1
+      tf_visible: true
     - type: ikea_stefan_long
       quantity: 1
+      tf_visible: true
     - type: ikea_stefan_short
       quantity: 1
+      tf_visible: true
     - type: ikea_stefan_middle
       quantity: 1
+      tf_visible: true
     - type: ikea_stefan_side_left
       quantity: 1
+      tf_visible: true
     - type: ikea_stefan_side_right
       quantity: 1
+      tf_visible: true
