--- a/models/ikea_parts.yaml
+++ b/models/ikea_parts.yaml
@@ -1,43 +1,72 @@
 ikea_wood_pin:
     model_file: ikea_wood_pin.stl
     part_number: 101350
-    assemble_points: []
+    assemble_points: 
+        default: [[0,0,0], [0,0,0,1]]
 
 ikea_long_screw:
     model_file: ikea_long_screw.stl
     part_number: 104322
-    assemble_points: []
+    assemble_points:
+        default: [[0,0,0], [0,0,0,1]]
 
 ikea_short_screw:
     model_file: ikea_short_screw.stl
     part_number: 122925
-    assemble_points: []
+    assemble_points:
+        default: [[0,0,0], [0,0,0,1]]
     
 ikea_l_bracket:
     model_file: ikea_l_bracket.stl
     part_number: 122620
-    assemble_points: []
+    assemble_points: 
+        pin: [[0,0,0], [0,0,0,1]]
+        screw_hole: [[0,0,0], [0,0,0,1]]
     
 ikea_stefan_bottom:
     model_file: ikea_stefan_bottom.stl
-    assemble_points: []
+    assemble_points: 
+        screw_hole_1: [[0,0,0], [0,0,0,1]]
+        screw_hole_2: [[0,0,0], [0,0,0,1]]
+        screw_hole_3: [[0,0,0], [0,0,0,1]]
+        screw_hole_4: [[0,0,0], [0,0,0,1]]
 
 ikea_stefan_long:
     model_file: ikea_stefan_long.stl
-    assemble_points: []
+    assemble_points: 
+        hole_1: [[0,0,0], [0,0,0,1]]
+        hole_2: [[0,0,0], [0,0,0,1]]
+        hole_3: [[0,0,0], [0,0,0,1]]
+        hole_4: [[0,0,0], [0,0,0,1]]
 
 ikea_stefan_short:
     model_file: ikea_stefan_short.stl
-    assemble_points: []
+    assemble_points: 
+        hole_1: [[0,0,0], [0,0,0,1]]
+        hole_2: [[0,0,0], [0,0,0,1]]
+        hole_3: [[0,0,0], [0,0,0,1]]
+        hole_4: [[0,0,0], [0,0,0,1]]
 
 ikea_stefan_middle:
     model_file: ikea_stefan_middle.stl
-    assemble_points: []
+    assemble_points: 
+        hole_1: [[0,0,0], [0,0,0,1]]
+        hole_2: [[0,0,0], [0,0,0,1]]
+        hole_3: [[0,0,0], [0,0,0,1]]
+        hole_4: [[0,0,0], [0,0,0,1]]
+        hole_5: [[0,0,0], [0,0,0,1]]
+        hole_6: [[0,0,0], [0,0,0,1]]
 
 ikea_stefan_side_left:
     model_file: ikea_stefan_side_left.stl
-    assemble_points: []
+    assemble_points: 
+        short_hole: [[0,0,0], [0,0,0,1]]
+        long_hole: [[0,0,0], [0,0,0,1]]
+        middle_hole: [[0,0,0], [0,0,0,1]]
 
 ikea_stefan_side_right:
     model_file: ikea_stefan_side_right.stl
-    assemble_points: []
+    assemble_points: 
+        short_hole: [[0,0,0], [0,0,0,1]]
+        long_hole: [[0,0,0], [0,0,0,1]]
+        middle_hole: [[0,0,0], [0,0,0,1]]
