restore package.xml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(assembly_knowledge)
 find_package(catkin REQUIRED)
 catkin_package(CATKIN_DEPENDS xacro)
 
-install(DIRECTORY furniture_sets models
+install(DIRECTORY furniture_info models
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
