--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -6,10 +6,26 @@ ikea_stefan_side_left:
     tf_visible: true
     # same side first
     assembly_points: # wrt base frame 
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+        # coordinates of pin holes
+      - [[0.431575428, 0.876060012, -0.05], [0, 0, 0, 1]]
+      - [[0.427121888, 0.844371434, -0.05], [0, 0, 0, 1]]
+      - [[0.393243934, 0.567390777, -0.05], [0, 0, 0, 1]]
+      
+      - [[0.369042461, 0.40743307, -0.05], [0, 0, 0, 1]]
+      - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]
+      
+      - [[0.002166331, 0.426660233, -0.015], [0, 0, 0, 1]]
+      - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]
+      
+        # coordinate of bolt holes        
+      - [[0.429348658, 0.860215723, -0.05], [0, 0, 0, 1]]
+      - [[0.368205086, 0.391454997, -0.05], [0, 0, 0, 1]]
+      - [[0.001328956, 0.41068216, -0.015], [0, 0, 0, 1]]
+      
+        # point to mate a zig
+      - [[-0.015, 0.00, 0.015], [0, 0, 0, 1]]
+      - [[0.434534042, 0.00, -0.02], [0, 0, 0, 1]]
+      
     graspable_points:
       - [[x,y,z], [x,y,z,w]]
       - [[x,y,z], [x,y,z,w]]
@@ -22,10 +38,26 @@ ikea_stefan_side_right:
     model_file: ikea_stefan_side_right.stl
     tf_visible: true
     assembly_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+        # coordinates of pin holes
+      - [[0.431575428, 0.876060012, 0.05], [1, 0, 0, 0]]
+      - [[0.427121888, -0.844371434, 0.05], [1, 0, 0, 0]]
+      - [[0.393243934, 0.567390777, 0.05], [1, 0, 0, 0]]
+      
+      - [[0.369042461, 0.40743307, 0.05], [1, 0, 0, 0]]
+      - [[0.36736771, 0.375476925, 0.05], [1, 0, 0, 0]]
+      
+      - [[0.002166331, 0.426660233, 0.015], [1, 0, 0, 0]]
+      - [[0.00049158, 0.394704088, 0.015], [1, 0, 0, 0]]
+      
+        # coordinate of bolt holes        
+      - [[0.429348658, 0.860215723, 0.05], [1, 0, 0, 0]]
+      - [[0.368205086, 0.391454997, 0.05], [1, 0, 0, 0]]
+      - [[0.001328956, 0.41068216, 0.015], [1, 0, 0, 0]]
+      
+        # point to mate a zig
+      - [[-0.015, 0.00, -0.015], [0, 0, 0, 1]]
+      - [[0.434534042, 0.00, 0.02], [0, 0, 0, 1]]
+      
     graspable_points:
       - [[x,y,z], [x,y,z,w]]
       - [[x,y,z], [x,y,z,w]]
@@ -38,10 +70,23 @@ ikea_stefan_long:
     model_file: ikea_stefan_long.stl
     tf_visible: true
     assembly_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+        # coordinates of pin holes
+      - [[0.17, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[0.17, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[-0.17, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      - [[-0.17, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+        
+        # coordinates of bracket holes
+      - [[0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
+      - [[-0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
+        
+        # coordinates of bolt holes
+        - [[0.17, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+        - [[-0.17, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+        
+        # point to mate a zig
+      - [[-0.17, 0.025, 0.0], [0, 0, 0, 1]]
+      
     graspable_points:
       - [[x,y,z], [x,y,z,w]]
       - [[x,y,z], [x,y,z,w]]
@@ -54,10 +99,22 @@ ikea_stefan_short:
     model_file: ikea_stefan_short.stl
     tf_visible: true
     assembly_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+        # coordinates of pin holes
+      - [[0.135, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[0.135, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[-0.135, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      - [[-0.135, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+        
+        # coordinates of bracket holes
+      - [[0.08, -0.0145, 0.02], [1, 0, 0, 0 ]]
+      - [[-0.08, -0.0145, 0.02], [1, 0, 0, 0 ]]
+        
+        # coordinates of bolt holes
+        - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+        - [[-0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+        
+        # point to mate a zig
+      - [[-0.135, 0.025, 0.0], [0, 0, 0, 1]]
     graspable_points:
       - [[x,y,z], [x,y,z,w]]
       - [[x,y,z], [x,y,z,w]]
@@ -70,10 +127,21 @@ ikea_stefan_middle:
     model_file: ikea_stefan_middle.stl
     tf_visible: true
     assembly_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+        # coordinates of pin holes
+      - [[0.135, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[0.135, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[0.135, -0.295, 0.005], [-0.5, -0.5, 0.5, 0.5]]
+      - [[-0.135, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      - [[-0.135, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      - [[-0.135, -0.295, 0.005], [ 0.5, 0.5, 0.5, 0.5]]
+      
+        # coordinates of bolt holes
+      - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[-0.135, 0.0, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      
+        # point to mate a zig
+      - [[0.135, -0.31, -0.005], [0, 0, 0, 1]]
+
     graspable_points:
       - [[x,y,z], [x,y,z,w]]
       - [[x,y,z], [x,y,z,w]]
@@ -86,10 +154,12 @@ ikea_stefan_bottom:
     model_file: ikea_stefan_bottom.stl
     tf_visible: true
     assembly_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+        # coordinates of pin holes
+      - [[0, 0.205, 0], [ 0.7071068, 0, 0, 0.7071068]]
+      
+        # point to mate a zig
+      - [[-0.134, 0.205, 0.01], [0, 0, 0, 1]]
+      
     graspable_points:
       - [[x,y,z], [x,y,z,w]]
       - [[x,y,z], [x,y,z,w]]
