--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -25,11 +25,8 @@ ikea_stefan_side_left:
         # point to mate a zig
       - [[-0.015, 0.00, 0.015], [0, 0, 0, 1]]
       - [[0.434534042, 0.00, -0.02], [0, 0, 0, 1]]
-      
-    graspable_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+
+    graspable_points: ikea_stefan_side_left_grasp.yaml
 
 ikea_stefan_side_right:
     class_id: 2
@@ -58,10 +55,7 @@ ikea_stefan_side_right:
       - [[-0.015, 0.00, -0.015], [0, 0, 0, 1]]
       - [[0.434534042, 0.00, 0.02], [0, 0, 0, 1]]
       
-    graspable_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+    graspable_points: ikea_stefan_side_right_grasp.yaml
          
 ikea_stefan_long:
     class_id: 3
@@ -87,10 +81,7 @@ ikea_stefan_long:
         # point to mate a zig
       - [[-0.17, 0.025, 0.0], [0, 0, 0, 1]]
       
-    graspable_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+    graspable_points: ikea_stefan_long_grasp.yaml
          
 ikea_stefan_short:
     class_id: 4
@@ -115,10 +106,7 @@ ikea_stefan_short:
         
         # point to mate a zig
       - [[-0.135, 0.025, 0.0], [0, 0, 0, 1]]
-    graspable_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+    graspable_points: ikea_stefan_short_grasp.yaml
          
 ikea_stefan_middle:
     class_id: 5
@@ -142,10 +130,7 @@ ikea_stefan_middle:
         # point to mate a zig
       - [[0.135, -0.31, -0.005], [0, 0, 0, 1]]
 
-    graspable_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+    graspable_points: ikea_stefan_middle_grasp.yaml
          
 ikea_stefan_bottom:
     class_id: 6
@@ -160,10 +145,7 @@ ikea_stefan_bottom:
         # point to mate a zig
       - [[-0.134, 0.205, 0.01], [0, 0, 0, 1]]
       
-    graspable_points:
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
-      - [[x,y,z], [x,y,z,w]]
+    graspable_points: ikea_stefan_bottom_grasp.yaml
          
 # chair_bracket:
 #   class_id: 1
