the orientation of side bolt hole 1 is modified

--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -7,9 +7,9 @@ ikea_stefan_side_left:
     # same side first
     assembly_points: # wrt base frame 
         # coordinates of pin holes
-      - [[0.431575428, 0.876060012, -0.05], [0, 0, 0, 1]]
-      - [[0.427121888, 0.844371434, -0.05], [0, 0, 0, 1]]
-      - [[0.393243934, 0.567390777, -0.05], [0, 0, 0, 1]]
+      - [[0.431575428, 0.876060012, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
+      - [[0.427121888, 0.844371434, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
+      - [[0.393243934, 0.567390777, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
       
       - [[0.369042461, 0.40743307, -0.05], [0, 0, 0, 1]]
       - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]      
@@ -18,13 +18,16 @@ ikea_stefan_side_left:
       - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]  
     
         # coordinate of bolt holes        
-      - [[0.429348658, 0.860215723, -0.05], [ 0.7071068, 0.7071068, 0, 0 ]]
+      - [[0.429348658, 0.860215723, -0.05], [ 0.7501111, 0.6613119, 0, 0 ]]
       - [[0.368205086, 0.391454997, -0.05], [ 0.7071068, -0.7071068, 0, 0 ]]
       - [[0.001328956, 0.41068216, -0.015], [ 0.7071068, -0.7071068, 0, 0 ]]
       
         # point to mate a zig
       - [[-0.015, 0.00, 0.015], [0, 0, 0, 1]]
       - [[0.434534042, 0.00, -0.02], [0, 0, 0, 1]]
+
+        # point to assembly a side_right
+      - [[-0.00, 0.00, -0.4], [0, 0, 0, 1]]
     graspable_points: ikea_stefan_side_left_grasp.yaml
 
 ikea_stefan_side_right:
@@ -46,14 +49,16 @@ ikea_stefan_side_right:
       - [[0.00049158, 0.394704088, 0.015], [1, 0, 0, 0]]
       
         # coordinate of bolt holes        
-      - [[0.429348658, 0.860215723, 0.05], [ 0, 0, -0.7071068, -0.7071068 ]]
+      - [[0.429348658, 0.860215723, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
       - [[0.368205086, 0.391454997, 0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
       - [[0.001328956, 0.41068216, 0.015], [ 0, 0, -0.7071068, 0.7071068 ]]
       
         # point to mate a zig
       - [[-0.015, 0.00, -0.015], [0, 0, 0, 1]]
       - [[0.434534042, 0.00, 0.02], [0, 0, 0, 1]]
-      
+
+        # base
+      - [[-0.00, 0.00, -0.0], [0, 0, 0, 1]]
     graspable_points: ikea_stefan_side_right_grasp.yaml
          
 ikea_stefan_long:
