update cont grasp points and some stefan model info

--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -9,14 +9,17 @@ ikea_stefan_side_left:
         # coordinates of pin holes
       - [[0.431575428, 0.876060012, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
       - [[0.427121888, 0.844371434, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
-      - [[0.393243934, 0.567390777, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
+#      - [[0.393243934, 0.567390777, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]] #original
+      - [[0.393243934, 0.567390777, -0.05], [ 0.9980366, -0.0626337, 0, 0] ]
       
       - [[0.369042461, 0.40743307, -0.05], [0, 0, 0, 1]]
-      - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]      
+#      - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]      
+      - [[0.36736771, 0.375476925, -0.05], [0.7071068,-0.7071068,0,0]] #intern kim edited
 
       - [[0.002166331, 0.426660233, -0.015], [0, 0, 0, 1]]
-      - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]  
-    
+#      - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]  
+      - [[0.00049158, 0.394704088, -0.015], [ 0.7071068, -0.7071068, 0, 0 ]]  
+
         # coordinate of bolt holes        
       - [[0.429348658, 0.860215723, -0.05], [ 0.7501111, 0.6613119, 0, 0 ]]
       - [[0.368205086, 0.391454997, -0.05], [ 0.7071068, -0.7071068, 0, 0 ]]
@@ -27,7 +30,7 @@ ikea_stefan_side_left:
       - [[0.434534042, 0.00, -0.02], [0, 0, 0, 1]]
 
         # point to assembly a side_right
-      - [[-0.00, 0.00, -0.4], [0, 0, 0, 1]]
+      - [[0.429348658, 0.860215723, -0.4], [0, 0, -0.0626337, 0.9980366]]
     graspable_points: ikea_stefan_side_left_grasp.yaml
 
 ikea_stefan_side_right:
@@ -50,8 +53,10 @@ ikea_stefan_side_right:
       
         # coordinate of bolt holes        
       - [[0.429348658, 0.860215723, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
-      - [[0.368205086, 0.391454997, 0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
-      - [[0.001328956, 0.41068216, 0.015], [ 0, 0, -0.7071068, 0.7071068 ]]
+#      - [[0.368205086, 0.391454997, 0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
+      - [[0.368205086, 0.391454997, 0.15], [ 0, 0, 1, 0 ]]
+#      - [[0.001328956, 0.41068216, 0.015], [ 0, 0, -0.7071068, 0.7071068 ]]
+      - [[0.001328956, 0.41068216, -0.015], [ 0, 0, 0.707107, 0.707107 ]]
       
         # point to mate a zig
       - [[-0.015, 0.00, -0.015], [0, 0, 0, 1]]
@@ -59,6 +64,7 @@ ikea_stefan_side_right:
 
         # base
       - [[-0.00, 0.00, -0.0], [0, 0, 0, 1]]
+
     graspable_points: ikea_stefan_side_right_grasp.yaml
          
 ikea_stefan_long:
@@ -79,8 +85,8 @@ ikea_stefan_long:
       - [[-0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
         
         # coordinates of bolt holes
-      - [[0.17, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[-0.17, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+      - [[0.17, 0.0, 0.01], [0.5, 0.5, -0.5, -0.5]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      - [[-0.17, 0.0, 0.01], [0.5, -0.5, 0.5, 0.5]] #edit!! [-0.5, -0.5, 0.5, 0.5]
         
         # point to mate a zig
       - [[-0.17, 0.025, 0.0], [0, 0, 0, 1]]
@@ -122,7 +128,7 @@ ikea_stefan_middle:
         # coordinates of pin holes
       - [[0.135, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
       - [[0.135, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[0.135, -0.295, 0.005], [-0.5, -0.5, 0.5, 0.5]]
+      - [[0.135, -0.295, 0.005], [-0.7071068, 0.0, 0.7071068, 0.0]] #[-0.5, -0.5, 0.5, 0.5]]
       - [[-0.135, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
       - [[-0.135, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
       - [[-0.135, -0.295, 0.005], [ 0.5, 0.5, 0.5, 0.5]]
