--- a/models/grasps/ikea_stefan_bottom_cont_grasp.yaml
+++ b/models/grasps/ikea_stefan_bottom_cont_grasp.yaml
@@ -1,1 +1,33 @@
 grasp_points: 
+    - lower_bound:    [-0.207706, -0.1975, 0.005]
+      upper_bound:    [0.207706, -0.1975, 0.005]
+      orientation:    [-0.707107, 0, -0, 0.707107]
+      distance:       0.415412
+    - lower_bound:    [0.207706, -0.1975, 0.005]
+      upper_bound:    [-0.207706, -0.1975, 0.005]
+      orientation:    [0, 0.707107, 0.707107, 0]
+      distance:       0.415412
+    - lower_bound:    [-0.163561, 0.169046, 0.005]
+      upper_bound:    [-0.210186, -0.194682, 0.005]
+      orientation:    [-0.467133, 0.530836, -0.530836, 0.467133]
+      distance:       0.366705
+    - lower_bound:    [0.163561, 0.169046, 0.005]
+      upper_bound:    [0.210186, -0.194682, 0.005]
+      orientation:    [0.530836, -0.467133, -0.467133, 0.530836]
+      distance:       0.366705
+    - lower_bound:    [0.210186, -0.194682, 0.005]
+      upper_bound:    [0.163561, 0.169046, 0.005]
+      orientation:    [0.467133, 0.530836, -0.530836, -0.467133]
+      distance:       0.366705
+    - lower_bound:    [-0.210186, -0.194682, 0.005]
+      upper_bound:    [-0.163561, 0.169046, 0.005]
+      orientation:    [0.530836, 0.467133, 0.467133, 0.530836]
+      distance:       0.366705
+    - lower_bound:    [0.134, 0.1975, 0.005]
+      upper_bound:    [-0.134, 0.1975, 0.005]
+      orientation:    [0, 0.707107, -0.707107, 0]
+      distance:       0.268
+    - lower_bound:    [-0.134, 0.1975, 0.005]
+      upper_bound:    [0.124074, 0.1975, 0.005]
+      orientation:    [0.707107, 0, 0, 0.707107]
+      distance:       0.258074
