--- a/models/grasps/ikea_stefan_middle_cont_grasp.yaml
+++ b/models/grasps/ikea_stefan_middle_cont_grasp.yaml
@@ -1,1 +1,50 @@
 grasp_points: 
+    - lower_bound:    [0.125, -0.3025, 0.005]
+      upper_bound:    [-0.135, -0.3025, 0.005]
+      orientation:    [0, 0.707107, 0.707107, 0]
+      distance:       0.26
+    - lower_bound:    [-0.135, -0.3025, 0.005]
+      upper_bound:    [0.125, -0.3025, 0.005]
+      orientation:    [-0.707107, 0, -0, 0.707107]
+      distance:       0.26
+    - lower_bound:    [-0.057, -0.270192, 0.005]
+      upper_bound:    [-0.057, -0.0348077, 0.005]
+      orientation:    [0.5, 0.5, 0.5, 0.5]
+      distance:       0.235385
+    - lower_bound:    [-0.057, -0.0348077, 0.005]
+      upper_bound:    [-0.057, -0.270192, 0.005]
+      orientation:    [0.5, -0.5, 0.5, -0.5]
+      distance:       0.235385
+    - lower_bound:    [0.057, -0.0348077, 0.005]
+      upper_bound:    [0.057, -0.270192, 0.005]
+      orientation:    [0.5, -0.5, -0.5, 0.5]
+      distance:       0.235385
+    - lower_bound:    [0.057, -0.270192, 0.005]
+      upper_bound:    [0.057, -0.0348077, 0.005]
+      orientation:    [0.5, 0.5, -0.5, -0.5]
+      distance:       0.235385
+    - lower_bound:    [0.045056, 0.017378, 0.00354978]
+      upper_bound:    [-0.045056, 0.017378, 0.00354978]
+      orientation:    [0, 0.711877, -0.702304, 0]
+      distance:       0.0901121
+    - lower_bound:    [-0.0450556, 0.0175, 0.00362591]
+      upper_bound:    [0.0450556, 0.0175, 0.00362591]
+      orientation:    [0.707107, 0, 0, 0.707107]
+      distance:       0.0901112
+    - lower_bound:    [0.124469, 0.0174088, 0.00832974]
+      upper_bound:    [0.0445163, 0.0174084, 0.00356254]
+      orientation:    [0.0211304, 0.710366, -0.703191, 0.021346]
+      distance:       0.0800947
+    - lower_bound:    [-0.044514, 0.0175, 0.00360053]
+      upper_bound:    [-0.124467, 0.0175, 0.00836774]
+      orientation:    [-0.0212385, 0.706788, -0.706788, -0.0212385]
+      distance:       0.0800947
+    - lower_bound:    [0.0455932, 0.0175, 0.00363802]
+      upper_bound:    [0.115552, 0.0175, 0.00779444]
+      orientation:    [0.70679, -0.0211528, 0.0211528, 0.70679]
+      distance:       0.0700822
+    - lower_bound:    [-0.11555, 0.0175, 0.00783244]
+      upper_bound:    [-0.0455932, 0.0175, 0.00363802]
+      orientation:    [0.70679, 0.0211528, -0.0211528, 0.70679]
+      distance:       0.0700822
+
