--- a/models/grasps/ikea_stefan_side_right_grasp.yaml
+++ b/models/grasps/ikea_stefan_side_right_grasp.yaml
@@ -1,4 +1,7 @@
 grasp_points: 
+    - [[ 0.374534042, 0.326034108, 0.03], [0, 0, 0, 1]] # grasp point for bolt screwing ont the short part
+    - [[-0.001299, 0.23, -0.001627153], [0, 0, 0.7071068, 0.7071068]] # grasp point for bolt screwing ont the long part
+    - [[0.30326221, 0.394805131, 0.029767764], [1, 0, 0.0, 0.0]] # grasp point for side chair
     - [[0.384034, 0.435, 0.035], [0.5, -0.5, -0.5, 0.5]]
     - [[0.384034, 0.424387, 0.035], [0.5, -0.5, -0.5, 0.5]]
     - [[0.384034, 0.413774, 0.035], [0.5, -0.5, -0.5, 0.5]]
