--- a/models/grasps/ikea_stefan_side_left_cont_grasp.yaml
+++ b/models/grasps/ikea_stefan_side_left_cont_grasp.yaml
@@ -1,1 +1,169 @@
 grasp_points: 
+    - lower_bound:    [0.373356, 0.437291, -0.0275]
+      upper_bound:    [0.43479, 0.898274, -0.0275]
+      orientation:    [0.750007, 0.66143, 0, 0]
+      distance:       0.465059
+    - lower_bound:    [0.384093, 0.435938, -0.035]
+      upper_bound:    [0.442233, 0.897336, -0.035]
+      orientation:    [-0.530335, -0.467702, 0.467702, 0.530335]
+      distance:       0.465047
+    - lower_bound:    [0.442233, 0.897336, -0.035]
+      upper_bound:    [0.384093, 0.435938, -0.035]
+      orientation:    [-0.467702, 0.530335, 0.530335, -0.467702]
+      distance:       0.465047
+    - lower_bound:    [0.433499, 0.888571, -0.0275]
+      upper_bound:    [0.373034, 0.4324, -0.0275]
+      orientation:    [-0.656059, 0.75471, 0, 0]
+      distance:       0.46016
+    - lower_bound:    [0.373034, 0.4324, -0.0425]
+      upper_bound:    [0.433499, 0.888571, -0.0425]
+      orientation:    [0, 0, 0.656059, 0.75471]
+      distance:       0.46016
+    - lower_bound:    [0.361961, 0.433956, -0.035]
+      upper_bound:    [0.426001, 0.889624, -0.035]
+      orientation:    [0.53366, 0.463904, 0.463904, 0.53366]
+      distance:       0.460146
+    - lower_bound:    [0.426001, 0.889624, -0.035]
+      upper_bound:    [0.361961, 0.433956, -0.035]
+      orientation:    [-0.463904, 0.53366, -0.53366, 0.463904]
+      distance:       0.460146
+    - lower_bound:    [-0.0075, 0, 0]
+      upper_bound:    [-0.0075, 0.435, 0]
+      orientation:    [0.5, 0.5, 0.5, 0.5]
+      distance:       0.435
+    - lower_bound:    [-0.0075, 0.425114, 0]
+      upper_bound:    [-0.0075, 0, 0]
+      orientation:    [0.5, -0.5, 0.5, -0.5]
+      distance:       0.425114
+    - lower_bound:    [0.375991, 0.1225, -0.0338243]
+      upper_bound:    [0.0241368, 0.1225, -0.000854961]
+      orientation:    [0.0325707, 0.706356, 0.706356, -0.0325707]
+      distance:       0.353396
+    - lower_bound:    [0.025997, 0.1225, -0.00102922]
+      upper_bound:    [0.36788, 0.1225, -0.0330642]
+      orientation:    [-0.706314, 0.0334694, 0.0334694, 0.706314]
+      distance:       0.343381
+    - lower_bound:    [0.367605, 0.13, -0.0359585]
+      upper_bound:    [0.0257634, 0.13, -0.0034886]
+      orientation:    [0.0473329, 0, 0.998879, 0]
+      distance:       0.34338
+    - lower_bound:    [0.024364, 0.13, 0.00160264]
+      upper_bound:    [0.366206, 0.13, -0.0299897]
+      orientation:    [0.998939, 0, -0.0460619, -0]
+      distance:       0.343298
+    - lower_bound:    [0.425861, 0.0090884, -0.035]
+      upper_bound:    [0.38409, 0.349181, -0.035]
+      orientation:    [0.468533, 0.529601, -0.529601, -0.468533]
+      distance:       0.342648
+    - lower_bound:    [0.38409, 0.349181, -0.035]
+      upper_bound:    [0.425861, 0.0090884, -0.035]
+      orientation:    [0.529601, -0.468533, -0.468533, 0.529601]
+      distance:       0.342648
+    - lower_bound:    [0.0256398, 0.13, -0.00347686]
+      upper_bound:    [0.363279, 0.13, -0.0355477]
+      orientation:    [-0, 0.0473329, -0, 0.998879]
+      distance:       0.339159
+    - lower_bound:    [0.0240133, 0.1375, -0.000843381]
+      upper_bound:    [0.361613, 0.1375, -0.032477]
+      orientation:    [0.706356, 0.0325707, -0.0325707, 0.706356]
+      distance:       0.339079
+    - lower_bound:    [0.36188, 0.13, -0.0295899]
+      upper_bound:    [0.0242404, 0.13, 0.00161406]
+      orientation:    [0, 0.998939, 0, -0.0460619]
+      distance:       0.339078
+    - lower_bound:    [0.353622, 0.1375, -0.0317282]
+      upper_bound:    [0.0258734, 0.1375, -0.00101764]
+      orientation:    [-0.0334694, 0.706314, -0.706314, -0.0334694]
+      distance:       0.329184
+    - lower_bound:    [0.43479, 0.898274, -0.0425]
+      upper_bound:    [0.391656, 0.574605, -0.0425]
+      orientation:    [0, -0, -0.750007, 0.66143]
+      distance:       0.326531
+    - lower_bound:    [0.0263947, 0.391898, -0.00117459]
+      upper_bound:    [0.345956, 0.37515, -0.0341158]
+      orientation:    [-0.70688, 0.0546769, 0.0179004, 0.70499]
+      distance:       0.321691
+    - lower_bound:    [0.345179, 0.410239, -0.0340357]
+      upper_bound:    [0.0256179, 0.426987, -0.00109452]
+      orientation:    [0.0179004, -0.70499, 0.70688, 0.0546769]
+      distance:       0.321691
+    - lower_bound:    [0.0235779, 0.426987, -0.000884232]
+      upper_bound:    [0.343139, 0.410239, -0.0338254]
+      orientation:    [0.70499, 0.0179004, -0.0546769, 0.70688]
+      distance:       0.321691
+    - lower_bound:    [0.0255277, 0.409414, 0.00151001]
+      upper_bound:    [0.345089, 0.392666, -0.0314312]
+      orientation:    [0.998343, -0.0261425, -0.0512499, -0.00134202]
+      distance:       0.321691
+    - lower_bound:    [0.336637, 0.393109, -0.0354806]
+      upper_bound:    [0.0270616, 0.409334, -0.00356884]
+      orientation:    [0.0512499, -0.00134203, 0.998343, 0.0261425]
+      distance:       0.311638
+    - lower_bound:    [0.343916, 0.37515, -0.0339055]
+      upper_bound:    [0.034341, 0.391374, -0.00199372]
+      orientation:    [0.0546769, 0.70688, 0.70499, -0.0179004]
+      distance:       0.311638
+    - lower_bound:    [0, 0.375682, 0.0075]
+      upper_bound:    [0, 0.158182, 0.0075]
+      orientation:    [0.707107, -0.707107, -0, 0]
+      distance:       0.2175
+    - lower_bound:    [0, 0.375682, -0.0075]
+      upper_bound:    [0, 0.158182, -0.0075]
+      orientation:    [0, 0, -0.707107, 0.707107]
+      distance:       0.2175
+    - lower_bound:    [0.0075, 0.365795, 0]
+      upper_bound:    [0.0075, 0.158182, 0]
+      orientation:    [0.5, -0.5, -0.5, 0.5]
+      distance:       0.207614
+    - lower_bound:    [0.373034, 0.347823, -0.0425]
+      upper_bound:    [0.397827, 0.157949, -0.0425]
+      orientation:    [0, 0, -0.662606, 0.748969]
+      distance:       0.191485
+    - lower_bound:    [0.374025, 0.330984, -0.0275]
+      upper_bound:    [0.397327, 0.161634, -0.0275]
+      orientation:    [0.758516, -0.651655, -5.42379e-07, 6.3132e-07]
+      distance:       0.170947
+    - lower_bound:    [0.361948, 0.329144, -0.035]
+      upper_bound:    [0.386191, 0.170107, -0.035]
+      orientation:    [-0.536352, 0.460789, -0.460789, 0.536352]
+      distance:       0.160874
+    - lower_bound:    [0.419258, 0.00224447, -0.0425001]
+      upper_bound:    [0.404181, 0.111824, -0.0425001]
+      orientation:    [1.22959e-06, 1.43122e-06, 0.758516, 0.651655]
+      distance:       0.110612
+    - lower_bound:    [0.411948, 0.00113019, -0.035]
+      upper_bound:    [0.395282, 0.110468, -0.035]
+      orientation:    [0.460789, 0.536352, 0.536352, 0.460789]
+      distance:       0.110601
+    - lower_bound:    [0.0075, 0, 0]
+      upper_bound:    [0.0075, 0.10875, 0]
+      orientation:    [0.5, 0.5, -0.5, -0.5]
+      distance:       0.10875
+    - lower_bound:    [0, 0, 0.0075]
+      upper_bound:    [0, 0.10875, 0.0075]
+      orientation:    [0.707107, 0.707107, 0, 0]
+      distance:       0.10875
+    - lower_bound:    [0.418436, 0.00817636, -0.0275]
+      upper_bound:    [0.404696, 0.108025, -0.0275]
+      orientation:    [0.662606, 0.748969, 0, 0]
+      distance:       0.100789
+    - lower_bound:    [0, 0.00988636, -0.0075]
+      upper_bound:    [0, 0.10875, -0.0075]
+      orientation:    [0, 0, 0.707107, 0.707107]
+      distance:       0.0988636
+    - lower_bound:    [0.384034, 0.435, -0.035]
+      upper_bound:    [0.384034, 0.350095, -0.035]
+      orientation:    [0.5, -0.5, -0.5, 0.5]
+      distance:       0.0849051
+    - lower_bound:    [0.384034, 0.350095, -0.035]
+      upper_bound:    [0.384034, 0.424387, -0.035]
+      orientation:    [0.5, 0.5, -0.5, -0.5]
+      distance:       0.074292
+    - lower_bound:    [0, 0.00980016, 0.00738686]
+      upper_bound:    [0, 0.0790047, 0.0065914]
+      orientation:    [0.707095, 0.707095, -0.00406363, 0.00406363]
+      distance:       0.0692091
+    - lower_bound:    [0, 0.0100324, 0.00736905]
+      upper_bound:    [0, 0.070811, 0.00657958]
+      orientation:    [0.707092, 0.707092, -0.00459213, 0.00459213]
+      distance:       0.0607838
