--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -9,21 +9,20 @@ ikea_stefan_side_left:
         # coordinates of pin holes
       - [[0.431575428, 0.876060012, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
       - [[0.427121888, 0.844371434, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
-#      - [[0.393243934, 0.567390777, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]] #original
-      - [[0.393243934, 0.567390777, -0.05], [ 0.9980366, -0.0626337, 0, 0] ]
+      - [[0.393243934, 0.567390777, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
       
       - [[0.369042461, 0.40743307, -0.05], [0, 0, 0, 1]]
-#      - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]      
-      - [[0.36736771, 0.375476925, -0.05], [0.7071068,-0.7071068,0,0]] #intern kim edited
+      - [[0.36736771, 0.375476925, -0.05], [0, 0, 0, 1]]      
+      # - [[0.36736771, 0.375476925, -0.05], [0.7071068,-0.7071068,0,0]] #intern kim edited
 
       - [[0.002166331, 0.426660233, -0.015], [0, 0, 0, 1]]
-#      - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]  
-      - [[0.00049158, 0.394704088, -0.015], [ 0.7071068, -0.7071068, 0, 0 ]]  
+      - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]  
+      # - [[0.00049158, 0.394704088, -0.015], [ 0.7071068, -0.7071068, 0, 0 ]]  
 
         # coordinate of bolt holes        
-      - [[0.429348658, 0.860215723, -0.05], [ 0.7501111, 0.6613119, 0, 0 ]]
-      - [[0.368205086, 0.391454997, -0.05], [ 0.7071068, -0.7071068, 0, 0 ]]
-      - [[0.001328956, 0.41068216, -0.015], [ 0.7071068, -0.7071068, 0, 0 ]]
+      - [[0.429348658, 0.860215723, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
+      - [[0.368205086, 0.391454997, -0.05], [0, 0, 0, 1]]
+      - [[0.001328956, 0.41068216, -0.015], [0, 0, 0, 1]]
       
         # point to mate a zig
       - [[-0.015, 0.00, 0.015], [0, 0, 0, 1]]
@@ -32,6 +31,7 @@ ikea_stefan_side_left:
         # point to assembly a side_right
       - [[0.429348658, 0.860215723, -0.4], [0, 0, -0.0626337, 0.9980366]]
     graspable_points: ikea_stefan_side_left_grasp.yaml
+    graspable_lines: ikea_stefan_side_left_cont_grasp.yaml
 
 ikea_stefan_side_right:
     class_id: 2
@@ -41,9 +41,9 @@ ikea_stefan_side_right:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.431575428, 0.876060012, 0.05], [1, 0, 0, 0]]
-      - [[0.427121888, -0.844371434, 0.05], [1, 0, 0, 0]]
-      - [[0.393243934, 0.567390777, 0.05], [1, 0, 0, 0]]
+      - [[0.431575428, 0.876060012, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
+      - [[0.427121888, 0.844371434, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
+      - [[0.393243934, 0.567390777, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
       
       - [[0.369042461, 0.40743307, 0.05], [1, 0, 0, 0]]
       - [[0.36736771, 0.375476925, 0.05], [1, 0, 0, 0]]
@@ -64,8 +64,12 @@ ikea_stefan_side_right:
 
         # base
       - [[-0.00, 0.00, -0.0], [0, 0, 0, 1]]
+      
+      # top
+      - [[-0.434820213, 0.898486347, 0.035], [-0.7053843, 0.0493253, -0.0493253, 0.7053843]]
 
     graspable_points: ikea_stefan_side_right_grasp.yaml
+    graspable_lines: ikea_stefan_side_right_cont_grasp.yaml
          
 ikea_stefan_long:
     class_id: 3
@@ -75,23 +79,24 @@ ikea_stefan_long:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.17, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[0.17, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[-0.17, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
-      - [[-0.17, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      - [[0.17, 0.016, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
+      - [[0.17, -0.016, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
+      - [[-0.17, 0.016, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]]
+      - [[-0.17, -0.016, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]]
         
         # coordinates of bracket holes
       - [[0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
       - [[-0.112, -0.0145, 0.02], [1, 0, 0, 0 ]]
         
         # coordinates of bolt holes
-      - [[0.17, 0.0, 0.01], [0.5, 0.5, -0.5, -0.5]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-      - [[-0.17, 0.0, 0.01], [0.5, -0.5, 0.5, 0.5]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      - [[0.17, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      - [[-0.17, 0.0, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
         
         # point to mate a zig
       - [[-0.17, 0.025, 0.0], [0, 0, 0, 1]]
       
     graspable_points: ikea_stefan_long_grasp.yaml
+    graspable_lines: ikea_stefan_long_cont_grasp.yaml
          
 ikea_stefan_short:
     class_id: 4
@@ -101,61 +106,64 @@ ikea_stefan_short:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.135, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[0.135, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[-0.135, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
-      - [[-0.135, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+      - [[0.135, 0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
+      - [[0.135, -0.016, 0.01], [ -0.7071068, 0, 0.7071068, 0 ]]
+      - [[-0.135, 0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
+      - [[-0.135, -0.016, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
         
         # coordinates of bracket holes
       - [[0.08, -0.0145, 0.02], [1, 0, 0, 0 ]]
       - [[-0.08, -0.0145, 0.02], [1, 0, 0, 0 ]]
         
         # coordinates of bolt holes
-      - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[-0.135, 0.0, 0.01], [0.5, 0.5, 0.5, 0.5]]
+      - [[0.135, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
+      - [[-0.135, 0.0, 0.01], [ 0, 0.7071068, 0, 0.7071068 ]]
         
         # point to mate a zig
       - [[-0.135, 0.025, 0.0], [0, 0, 0, 1]]
     graspable_points: ikea_stefan_short_grasp.yaml
+    graspable_lines: ikea_stefan_short_cont_grasp.yaml
          
 ikea_stefan_middle:
-    class_id: 5
-    type: furniture_part
-    quantity: 1
-    model_file: ikea_stefan_middle.stl
-    tf_visible: true
-    assembly_points:
-        # coordinates of pin holes
-      - [[0.135, 0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[0.135, -0.016, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[0.135, -0.295, 0.005], [-0.7071068, 0.0, 0.7071068, 0.0]] #[-0.5, -0.5, 0.5, 0.5]]
-      - [[-0.135, 0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
-      - [[-0.135, -0.016, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
-      - [[-0.135, -0.295, 0.005], [ 0.5, 0.5, 0.5, 0.5]]
+     class_id: 5
+     type: furniture_part
+     quantity: 1
+     model_file: ikea_stefan_middle.stl
+     tf_visible: true
+     assembly_points:
+         # coordinates of pin holes
+       - [[0.135, 0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
+       - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
+       - [[0.135, -0.295, 0.005], [-0.7071068, 0.0, 0.7071068, 0.0]] #[-0.5, -0.5, 0.5, 0.5]]
+       - [[-0.135, 0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
+       - [[-0.135, -0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
+       - [[-0.135, -0.295, 0.005], [0, 0.7071068, 0, 0.7071068]]
       
-        # coordinates of bolt holes
-      - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-      - [[-0.135, 0.0, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
+         # coordinates of bolt holes
+       - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
+       - [[-0.135, 0.0, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
       
-        # point to mate a zig
-      - [[0.135, -0.31, -0.005], [0, 0, 0, 1]]
+         # point to mate a zig
+       - [[0.135, -0.31, -0.005], [0, 0, 0, 1]]
 
-    graspable_points: ikea_stefan_middle_grasp.yaml
+     graspable_points: ikea_stefan_middle_grasp.yaml
+     graspable_lines: ikea_stefan_middle_cont_grasp.yaml
          
-ikea_stefan_bottom:
-    class_id: 6
-    type: furniture_part
-    quantity: 1
-    model_file: ikea_stefan_bottom.stl
-    tf_visible: true
-    assembly_points:
-        # coordinates of pin holes
-      - [[0, 0.205, 0], [ 0.7071068, 0, 0, 0.7071068]]
+# ikea_stefan_bottom:
+#     class_id: 6
+#     type: furniture_part
+#     quantity: 1
+#     model_file: ikea_stefan_bottom.stl
+#     tf_visible: true
+#     assembly_points:
+#         # coordinates of pin holes
+#       - [[0, 0.205, 0], [ 0.7071068, 0, 0, 0.7071068]]
       
-        # point to mate a zig
-      - [[-0.134, 0.205, 0.01], [0, 0, 0, 1]]
+#         # point to mate a zig
+#       - [[-0.134, 0.205, 0.01], [0, 0, 0, 1]]
       
-    graspable_points: ikea_stefan_bottom_grasp.yaml
+#     graspable_points: ikea_stefan_bottom_grasp.yaml
+#     graspable_lines: ikea_stefan_bottom_cont_grasp.yaml
          
 # chair_bracket:
 #   class_id: 1
