--- a/models/grasps/ikea_stefan_middle_cont_grasp.yaml
+++ b/models/grasps/ikea_stefan_middle_cont_grasp.yaml
@@ -39,6 +39,8 @@ grasp_points:
       upper_bound:    [-0.124467, 0.0175, 0.00836774]
       orientation:    [-0.0212385, 0.706788, -0.706788, -0.0212385]
       distance:       0.0800947
+
+
     - lower_bound:    [0.0455932, 0.0175, 0.00363802]
       upper_bound:    [0.115552, 0.0175, 0.00779444]
       orientation:    [0.70679, -0.0211528, 0.0211528, 0.70679]
@@ -47,4 +49,99 @@ grasp_points:
       upper_bound:    [-0.0455932, 0.0175, 0.00363802]
       orientation:    [0.70679, 0.0211528, -0.0211528, 0.70679]
       distance:       0.0700822
+    - lower_bound:    [-0.135, -0.2875, 0.005]
+      upper_bound:    [-0.075, -0.2875, 0.005]
+      orientation:    [0.707107, 0, 0, 0.707107]
+      distance:       0.06
+    - lower_bound:    [-0.135, -0.295, 0.0025]
+      upper_bound:    [-0.075, -0.295, 0.0025]
+      orientation:    [0, 0, 0, 1]
+      distance:       0.06
+    - lower_bound:    [0.125, -0.295, 0.0075]
+      upper_bound:    [0.075, -0.295, 0.0075]
+      orientation:    [0, 1, -0, 0]
+      distance:       0.05
+    - lower_bound:    [0.125, -0.2875, 0.005]
+      upper_bound:    [0.075, -0.2875, 0.005]
+      orientation:    [-0, 0.707107, -0.707107, 0]
+      distance:       0.05
+    - lower_bound:    [0.125, -0.295, 0.0025]
+      upper_bound:    [0.075, -0.295, 0.0025]
+      orientation:    [0, 0, 1, -0]
+      distance:       0.05
+    - lower_bound:    [0.12486, 0, 0.00683077]
+      upper_bound:    [0.0766951, 0, 0.00357027]
+      orientation:    [-0.0337891, 0, 0.999429, 0]
+      distance:       0.0482755
+    - lower_bound:    [-0.0766951, 0, 0.00357027]
+      upper_bound:    [-0.12486, 0, 0.00683077]
+      orientation:    [0.0337891, 0, 0.999429, 0]
+      distance:       0.0482755
+    - lower_bound:    [-0.075585, -0.0175, 0.00526221]
+      upper_bound:    [-0.115551, -0.0175, 0.00781208]
+      orientation:    [0.0211528, 0.70679, 0.70679, -0.0211528]
+      distance:       0.0400473
 
+
+    - lower_bound:    [0.115554, -0.0175, 0.00776142]
+      upper_bound:    [0.0755876, -0.0175, 0.00521735]
+      orientation:    [-0.0211528, 0.70679, 0.70679, 0.0211528]
+      distance:       0.0400473
+    - lower_bound:    [-0.115461, 0, 0.00931597]
+      upper_bound:    [-0.0754856, 0, 0.00692107]
+      orientation:    [0.999552, -0, -0.0299146, 0]
+      distance:       0.040047
+    - lower_bound:    [0.0754856, 0, 0.00692107]
+      upper_bound:    [0.115461, 0, 0.00931597]
+      orientation:    [0.999552, 0, 0.0299146, 0]
+      distance:       0.040047
+    - lower_bound:    [-0.125, -0.295, 0.0075]
+      upper_bound:    [-0.075, -0.295, 0.0075]
+      orientation:    [1, -0, 0, -0]
+      distance:       0.05
+    - lower_bound:    [-0.1275, -0.28, 0.005]
+      upper_bound:    [-0.1275, -0.31, 0.005]
+      orientation:    [0.5, -0.5, 0.5, -0.5]
+      distance:       0.03
+    - lower_bound:    [0.1275, -0.31, 0.005]
+      upper_bound:    [0.1275, -0.28, 0.005]
+      orientation:    [0.5, 0.5, -0.5, -0.5]
+      distance:       0.03
+    # - lower_bound:    [0.126908, -0.025, 0.00848611]
+    #   upper_bound:    [0.126908, 0.005, 0.00848611]
+    #   orientation:    [0.516609, 0.516609, -0.48282, -0.48282]
+    #   distance:       0.03
+    - lower_bound:    [-0.1275, -0.31, 0.005]
+      upper_bound:    [-0.1275, -0.29, 0.005]
+      orientation:    [0.5, 0.5, 0.5, 0.5]
+      distance:       0.02
+    - lower_bound:    [0.1275, -0.29, 0.005]
+      upper_bound:    [0.1275, -0.31, 0.005]
+      orientation:    [0.5, -0.5, -0.5, 0.5]
+      distance:       0.02
+    - lower_bound:    [0.1275, -0.295, -0.005]
+      upper_bound:    [0.1275, -0.295, 0.015]
+      orientation:    [-0, -0.707107, 0, 0.707107]
+      distance:       0.02
+
+
+    - lower_bound:    [0.1275, -0.295, 0.015]
+      upper_bound:    [0.1275, -0.295, -0.005]
+      orientation:    [0.707107, 0, -0.707107, -0]
+      distance:       0.02
+    - lower_bound:    [-0.1275, -0.295, 0.015]
+      upper_bound:    [-0.1275, -0.295, -0.005]
+      orientation:    [0, 0.707107, 0, 0.707107]
+      distance:       0.02
+    - lower_bound:    [-0.1275, -0.295, -0.005]
+      upper_bound:    [-0.1275, -0.295, 0.015]
+      orientation:    [0.707107, 0, 0.707107, 0]
+      distance:       0.02
+    - lower_bound:    [0.028789, 0, 0.0020633]
+      upper_bound:    [0.0191363, 0, 0.00184578]
+      orientation:    [-0.0112652, -0, 0.999937, 0]
+      distance:       0.00965511
+    - lower_bound:    [-0.0191363, 0, 0.00184578]
+      upper_bound:    [-0.028789, 0, 0.0020633]
+      orientation:    [0.0112652, 0, 0.999937, -0]
+      distance:       0.00965511
