update assembled model

--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -21,14 +21,15 @@ ikea_stefan_side_left:
       # - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]
       
         # coordinate of bolt holes        
-      - [[0.45, 0.858, -0.05], [ 0, 0, -0.0626337, 0.9980366 ]]
-
+      - [[0.45, 0.858, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
       # - [[0.373548, 0.389227, -0.05], [0, 0, 0, 1]]
       - [[0.366548, 0.397227, -0.05], [0, 0, 0, 1]] ##num8
-
       # - [[-0.005, 0.418, -0.01535], [ 0, 0, 0.0, 0.1 ]]
-      - [[0.0, 0.41050, -0.01535], [ 0, 0, 0.0, 0.1 ]]
+      - [[0.000, 0.41050, -0.01535], [ 0, 0, 0.0, 0.1 ]]
       # - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]
+
+      # - [[0.000, 0, -0.37], [ 0, 0, -0.0174524, 0.9998477 ]]
+      - [[-0.00, 0, -0.37], [ 0, 0, -0.0, 1.0 ]]
 
     graspable_points: ikea_stefan_side_left_grasp.yaml
     graspable_lines: ikea_stefan_side_left_cont_grasp.yaml
@@ -41,9 +42,9 @@ ikea_stefan_side_right:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.453, 0.875, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
-      - [[0.447, 0.841, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
-      - [[0.395, 0.569, 0.05], [ 0.9980267, -0.0627905, 0, 0 ]]
+      - [[0.453, 0.875, 0.05], [ 0.9955825, -0.0938911, 0, 0 ]]
+      - [[0.447, 0.841, 0.05], [ 0.9955825, -0.0938911, 0, 0 ]]
+      - [[0.395, 0.569, 0.05], [ 0.9955825, -0.0938911, 0, 0 ]]
       
       - [[0.366624, 0.413727, 0.05], [1, 0, 0, 0]]
       - [[0.365672, 0.380741, 0.05], [1, 0, 0, 0]]
@@ -51,16 +52,15 @@ ikea_stefan_side_right:
       - [[0.0, 0.4265, 0.01535], [1, 0, 0, 0]]
       - [[0.0, 0.3945, 0.01535], [1, 0, 0, 0]]
       
-        # coordinate of bolt holes which are NOT MODIFIED!!!
+        # coordinate of bolt holes which are MODIFIED!!!
       - [[0.45, 0.858, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
-      # - [[0.366548, 0.397227, 0.05], [ 0, 0, 1, 0 ]]
-      - [[0.366548, 0.397227, 0.05], [ 0, 0, -0.3826834, 0.9238795 ]]      
-      - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.707107, 0.707107 ]]
+      - [[0.366548, 0.397227, 0.05], [ 0, 0, -0.707107, 0.707107 ]] # for panda_right bolting
+      - [[-0.000, 0.40550, 0.01535], [ 1, 0, 0.0, 0.0 ]]
       
-      # - [[0.45, 0.858, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
-      # - [[0.373548, 0.389227, 0.05], [ 0, 0, 1, 0 ]]
-      # - [[-0.005, 0.418, -0.01535], [ 0, 0, -0.707107, 0.707107 ]]
-      
+      # - [[0.445, 0.853, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
+      # - [[0.366548, 0.397227, 0.05], [ 0, 0, -0.707107, 0.707107 ]] # for panda_right bolting
+      # - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.707107, 0.707107 ]]
+      - [[0, 0, 0 ], [1, 0, 0, 0]]
     graspable_points: ikea_stefan_side_right_grasp.yaml
     graspable_lines: ikea_stefan_side_right_cont_grasp.yaml
          
@@ -88,6 +88,8 @@ ikea_stefan_long:
         #coordinates of bolt holes
       - [[0.17, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
       - [[-0.17, 0.0, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      # - [[-0.17, 0.0, 0.01], [ -0.7069385, -0.0154255, -0.7069385, -0.0154255 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      
     graspable_points: ikea_stefan_long_grasp.yaml
     graspable_lines: ikea_stefan_long_cont_grasp.yaml
     surface_center: ikea_stefan_long_assemble_surface.yaml
@@ -133,10 +135,11 @@ ikea_stefan_middle:
       #  - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
        - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
        - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-       - [[0.135, -0.295, 0.005], [ -0.7071068, 0, 0.7071068, 0 ]]
+       - [[0.135, -0.295, 0.005], [ -0.7070814, -0.0059904, 0.7070814, 0.0059904 ]]
       #  - [[0.135, -0.295, 0.005], [ -0.7057122, -0.0443882, 0.7057122, 0.0443882 ]]
       
-       - [[-0.135, 0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
+       - [[-0.135, 0.016, 0.01], [0, 0.7071068, 0, 0.7071068]] # index3
+      #  - [[-0.135, 0.016, 0.01], [0.0246777, 0.706676, 0.0246777, 0.706676]] # index3. fixed orientation to fit ikea_middle frame 201021 khc
        - [[-0.135, -0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
        - [[-0.135, -0.295, 0.005], [0, 0.7071068, 0, 0.7071068]]      
          # coordinates of bolt holes
@@ -165,6 +168,28 @@ ikea_stefan_bottom:
       
     graspable_points: ikea_stefan_bottom_grasp.yaml
     graspable_lines: ikea_stefan_bottom_cont_grasp.yaml
+
+ikea_stefan_without_bottom:
+    class_id: 7
+    type: furniture_part
+    quantity: 1
+    model_file: ikea_stefan_without_bottom.stl
+    tf_visible: true
+    assembly_points:      
+      # coordinate of bolt holes        
+      - [[0.45, 0.858, -0.01535], [ 0.9238795, -0.3826834, 0, 0 ]]   # [-0.3827, 0.9239, 0, 0])
+      - [[0.362, 0.40450, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8   backup [[0.366548, 0.397227, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8
+      - [[0.0, 0.41050, 0.01535], [ 0.7071068, 0.7071068, 0, 0 ] ] #[ 0, 0, 0.9238795, 0.3826834 ] ] #[ 0, 0, 0.0, 0.1 ]]
+      
+      # bolt hole on the side_right
+      # TODO : change the position along z-axis
+      - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]      
+      - [[0.370, 0.40450, -0.35], [ 0, 0, 0.7071068, 0.7071068 ]] # for panda_right bolting
+      # - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
+      - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
+
+    graspable_points: ikea_stefan_assembled_jy_grasp.yaml
+    graspable_lines: ikea_stefan_without_bottom_cont_grasp.yaml
 
 # ikea_stefan_bolt_side:
 #     class_id: 6
