--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -184,9 +184,16 @@ ikea_stefan_without_bottom:
       # bolt hole on the side_right
       # TODO : change the position along z-axis
       - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]      
-      - [[0.370, 0.40450, -0.35], [ 0, 0, 0.7071068, 0.7071068 ]] # for panda_right bolting
+      - [[0.370, 0.40050, -0.35], [ 0, 0, 0.9239, 0.3827 ]] # for panda_right bolting
       # - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
+      
+    
+      # bracket
+      - [[0.3239, 0.4236, -0.2650], [ 0, 0.7071068, 0.7071068, 0 ]]
+      - [[0.3239, 0.4236, -0.1050], [ 0, 0.7071068, 0.7071068, 0 ]]
+      - [[0.0171, 0.4254, -0.0734], [ -0.7071068, 0, 0, 0.7071068 ]]
+      - [[0.0171, 0.4254, -0.2974], [ -0.7071068, 0, 0, 0.7071068 ]]
 
     graspable_points: ikea_stefan_assembled_jy_grasp.yaml
     graspable_lines: ikea_stefan_without_bottom_cont_grasp.yaml
