--- a/models/grasps/ikea_stefan_side_right_cont_grasp.yaml
+++ b/models/grasps/ikea_stefan_side_right_cont_grasp.yaml
@@ -11,7 +11,8 @@ grasp_points:
       upper_bound:    [0.361093, 0.43574, 0.0346026]
       orientation:    [-0.449043, 0.546224, -0.546224, 0.449043]
       distance:       0.466623
-    - lower_bound:    [0.456956, 0.892277, 0.0268026]
+    # - lower_bound:    [0.456956, 0.892277, 0.0268026]
+    - lower_bound:    [0.450000, 0.892277, 0.0268026]
       upper_bound:    [0.372716, 0.439042, 0.0268026]
       orientation:    [0, -0, -0.765507, 0.643428]
       distance:       0.460997
