--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -8,24 +8,23 @@ ikea_stefan_side_left:
     assembly_points: # wrt base frame 
         # coordinates of pin holes
         # [ 0, 0, -0.0626337, 0.9980366 ]
-      - [[0.453, 0.875, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
-      - [[0.447, 0.841, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
-      - [[0.395, 0.569, -0.05],  [ 0, 0, -0.0938911, 0.9955825 ]]
-     
+      - [[0.453, 0.875, -0.05], [ 0, 0, 0.6376, 0.7703 ]]
+      - [[0.447, 0.841, -0.05], [ 0, 0, 0.6376, 0.7703 ]]
+      # - [[0.395, 0.569, -0.05],  [ 0, 0, -0.0938911, 0.9955825 ]] #original 2
+      - [[0.395, 0.569, -0.05],  [ 0, 0, 0.6376, 0.7703 ]] #modified 2
+      # - [[0.400, 0.576, -0.05],  [ 0, 0, 0.6376, 0.7703 ]] #modified 3
+         
       - [[0.366624, 0.413727, -0.05], [ 0, 0, -0.7071068, 0.7071068 ]]
       - [[0.365672, 0.380741, -0.05], [ 0, 0, -0.7071068, 0.7071068 ]]      
 
       - [[0.0, 0.4265, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]
       - [[0.0, 0.3945, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]  
-      # - [[0.002166331, 0.426660233, -0.015], [0, 0, 0, 1]]
-      # - [[0.00049158, 0.394704088, -0.015], [0, 0, 0, 1]]
       
         # coordinate of bolt holes        
       - [[0.45, 0.858, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
-      # - [[0.373548, 0.389227, -0.05], [0, 0, 0, 1]]
-      - [[0.366548, 0.397227, -0.05], [0, 0, 0, 1]] ##num8
-      # - [[-0.005, 0.418, -0.01535], [ 0, 0, 0.0, 0.1 ]]
-      - [[0.000, 0.41050, -0.01535], [ 0, 0, 0.0, 0.1 ]]
+      # - [[0.370, 0.40050, -0.05], [0, 0, 0, 1]] ##num8
+      - [[0.370, 0.39550, -0.05], [0, 0, 0, 1]] ##num8      
+      - [[0.000, 0.41050, -0.01535], [ 0, 0, 0.0, 0.1 ]] ##num9
       # - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]
 
       # - [[0.000, 0, -0.37], [ 0, 0, -0.0174524, 0.9998477 ]]
@@ -42,10 +41,11 @@ ikea_stefan_side_right:
     tf_visible: true
     assembly_points:
         # coordinates of pin holes
-      - [[0.453, 0.875, 0.05], [ 0.9955825, -0.0938911, 0, 0 ]]
-      - [[0.447, 0.841, 0.05], [ 0.9955825, -0.0938911, 0, 0 ]]
-      - [[0.395, 0.569, 0.05], [ 0.9955825, -0.0938911, 0, 0 ]]
+      - [[0.453, 0.875, 0.05], [ -0.7703, -0.6376, 0, 0 ]]
+      - [[0.447, 0.841, 0.05], [ -0.7703, -0.6376, 0, 0 ]]
+      - [[0.395, 0.569, 0.05], [ -0.7703, -0.6376, 0, 0 ]]
       
+
       - [[0.366624, 0.413727, 0.05], [1, 0, 0, 0]]
       - [[0.365672, 0.380741, 0.05], [1, 0, 0, 0]]
       
@@ -55,7 +55,7 @@ ikea_stefan_side_right:
         # coordinate of bolt holes which are MODIFIED!!!
       - [[0.45, 0.858, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
       - [[0.366548, 0.397227, 0.05], [ 0, 0, -0.707107, 0.707107 ]] # for panda_right bolting
-      - [[-0.000, 0.40550, 0.01535], [ 1, 0, 0.0, 0.0 ]]
+      - [[-0.000, 0.41050, 0.01535], [ 1, 0, 0.0, 0.0 ]]
       
       # - [[0.445, 0.853, 0.05], [ 0, 0, 0.6613119, 0.7501111 ]]
       # - [[0.366548, 0.397227, 0.05], [ 0, 0, -0.707107, 0.707107 ]] # for panda_right bolting
@@ -82,14 +82,17 @@ ikea_stefan_long:
       - [[-0.17, -0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
       
         #coordinates of bracket holes
-      - [[0.112, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
-      - [[-0.112, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
+      # - [[0.112, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
+      # - [[-0.112, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
+      - [[0.112, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
+      - [[-0.112, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
         
         #coordinates of bolt holes
       - [[0.17, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-      - [[-0.17, 0.0, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      # - [[-0.17, 0.0, 0.01], [ 0.7071068, 0, 0.7071068, 0 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
+      - [[-0.17, 0.0, 0.01], [-0.7071, 0.0062,  -0.7071, 0.0062]] #edit!! [-0.5, -0.5, 0.5, 0.5]
       # - [[-0.17, 0.0, 0.01], [ -0.7069385, -0.0154255, -0.7069385, -0.0154255 ]] #edit!! [-0.5, -0.5, 0.5, 0.5]
-      
+    
     graspable_points: ikea_stefan_long_grasp.yaml
     graspable_lines: ikea_stefan_long_cont_grasp.yaml
     surface_center: ikea_stefan_long_assemble_surface.yaml
@@ -112,8 +115,10 @@ ikea_stefan_short:
       - [[-0.135, -0.016, 0.01], [ 0.5, -0.5, 0.5, -0.5 ]]
 
         # coordinates of bracket holes
-      - [[0.08, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
-      - [[-0.08, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]]
+      # - [[0.08, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
+      # - [[-0.08, -0.0145, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
+      - [[0.08, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
+      - [[-0.08, -0.014, 0.02], [ -0.7071068, 0.7071068, 0, 0 ]] # original
         
         # coordinates of bolt holes
       - [[0.135, 0.0, 0.01], [ 0, -0.7071068, 0, 0.7071068 ]]
@@ -130,18 +135,28 @@ ikea_stefan_middle:
      model_file: ikea_stefan_middle.stl
      tf_visible: true
      assembly_points:
-         # coordinates of pin holes
-      #  - [[0.135, 0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
-      #  - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
-       - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-       - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
-       - [[0.135, -0.295, 0.005], [ -0.7070814, -0.0059904, 0.7070814, 0.0059904 ]]
-      #  - [[0.135, -0.295, 0.005], [ -0.7057122, -0.0443882, 0.7057122, 0.0443882 ]]
+      #    # coordinates of pin holes
+      # #  - [[0.135, 0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
+      # #  - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
+      #  - [[0.135, 0.016, 0.0135], [ -0.5, -0.5, 0.5, 0.5 ]] #1116
+      #  - [[0.135, -0.016, 0.0135], [ -0.5, -0.5, 0.5, 0.5 ]] #1116
+      #  - [[0.135, -0.295, 0.0055], [  -0.5, -0.5, 0.5, 0.5 ]]
+      # #  - [[0.135, -0.295, 0.0055], [ -0.7070814, -0.0059904, 0.7070814, 0.0059904 ]]
+      # #  - [[0.135, -0.295, 0.005], [ -0.7057122, -0.0443882, 0.7057122, 0.0443882 ]]
       
-       - [[-0.135, 0.016, 0.01], [0, 0.7071068, 0, 0.7071068]] # index3
-      #  - [[-0.135, 0.016, 0.01], [0.0246777, 0.706676, 0.0246777, 0.706676]] # index3. fixed orientation to fit ikea_middle frame 201021 khc
-       - [[-0.135, -0.016, 0.01], [0, 0.7071068, 0, 0.7071068]]
-       - [[-0.135, -0.295, 0.005], [0, 0.7071068, 0, 0.7071068]]      
+      #  - [[-0.135, 0.016, 0.0135], [0.5, 0.5, 0.5, 0.5]] # index3
+      #  - [[-0.135, -0.016, 0.0135], [0.5, 0.5, 0.5, 0.5]]
+      #  - [[-0.135, -0.295, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
+
+         # 11-28 version with middle(red HC marked)
+       - [[0.135, 0.015, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]] # index0 #1116
+       - [[0.135, -0.015, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]] # index1 #1116
+       - [[0.135, -0.298, 0.012], [  -0.5, -0.5, 0.5, 0.5 ]] # index2
+      
+       - [[-0.135, 0.009, 0.01], [0.5, 0.5, 0.5, 0.5]] # index3
+       - [[-0.135, -0.025, 0.01], [0.5, 0.5, 0.5, 0.5]] # index4
+       - [[-0.135, -0.294, 0.01], [0.5, 0.5, 0.5, 0.5]] # index5   
+
          # coordinates of bolt holes
        - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
        - [[-0.135, 0.0, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
@@ -183,8 +198,10 @@ ikea_stefan_without_bottom:
       
       # bolt hole on the side_right
       # TODO : change the position along z-axis
-      - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]      
-      - [[0.370, 0.40050, -0.35], [ 0, 0, 0.9239, 0.3827 ]] # for panda_right bolting
+      # - [[0.45, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]] # original value
+      - [[0.445, 0.858, -0.35], [ 0, 0, 0.6613119, 0.7501111 ]]           
+      - [[0.365, 0.41050, -0.35], [ 0, 0, 0.819152, 0.5735764 ]] # for panda_right bolting
+      # - [[0.370, 0.40050, -0.35], [ 0, 0, 0.9239, 0.3827 ]] # for panda_right bolting
       # - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       
