added joint presets

--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -23,8 +23,8 @@ ikea_stefan_side_left:
         # coordinate of bolt holes        
       - [[0.45, 0.858, -0.05], [ 0, 0, -0.0938911, 0.9955825 ]]
       # - [[0.370, 0.40050, -0.05], [0, 0, 0, 1]] ##num8
-      - [[0.370, 0.39550, -0.05], [0, 0, 0, 1]] ##num8      
-      - [[0.000, 0.41050, -0.01535], [ 0, 0, 0.0, 0.1 ]] ##num9
+      - [[0.365, 0.39050, -0.05], [0, 0, 0, 1]] ##num8      
+      - [[0.006, 0.41250, -0.01535], [ 0, 0, 0.0, 0.1 ]] ##num9
       # - [[0.0, 0.41050, -0.01535], [ 0, 0, -0.7071068, 0.7071068 ]]
 
       # - [[0.000, 0, -0.37], [ 0, 0, -0.0174524, 0.9998477 ]]
@@ -206,11 +206,11 @@ ikea_stefan_without_bottom:
       - [[-0.000, 0.41050, -0.38535], [ 0, 0, 0.3826834, 0.9238795 ]]
       
     
-      # bracket
-      - [[0.3239, 0.4236, -0.2650], [ 0, 0.7071068, 0.7071068, 0 ]]
-      - [[0.3239, 0.4236, -0.1050], [ 0, 0.7071068, 0.7071068, 0 ]]
-      - [[0.0171, 0.4254, -0.0734], [ -0.7071068, 0, 0, 0.7071068 ]]
-      - [[0.0171, 0.4254, -0.2974], [ -0.7071068, 0, 0, 0.7071068 ]]
+      # bracket 16cm,33mm
+      - [[0.3289, 0.4236, -0.2789], [ 0, 0.7071068, 0.7071068, 0 ]]
+      - [[0.3289, 0.4236, -0.1190], [ 0, 0.7071068, 0.7071068, 0 ]]
+      - [[0.0171, 0.4254, -0.0858], [ -0.7071068, 0, 0, 0.7071068 ]]
+      - [[0.0171, 0.4254, -0.3119], [ -0.7071068, 0, 0, 0.7071068 ]]
 
     graspable_points: ikea_stefan_assembled_jy_grasp.yaml
     graspable_lines: ikea_stefan_without_bottom_cont_grasp.yaml
