panda_rcu checkpoint

--- a/furniture_info/stefan.yaml
+++ b/furniture_info/stefan.yaml
@@ -135,32 +135,21 @@ ikea_stefan_middle:
      model_file: ikea_stefan_middle.stl
      tf_visible: true
      assembly_points:
-      #    # coordinates of pin holes
-      # #  - [[0.135, 0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
-      # #  - [[0.135, -0.016, 0.01], [-0.7071068, 0, 0.7071068, 0]]
-      #  - [[0.135, 0.016, 0.0135], [ -0.5, -0.5, 0.5, 0.5 ]] #1116
-      #  - [[0.135, -0.016, 0.0135], [ -0.5, -0.5, 0.5, 0.5 ]] #1116
-      #  - [[0.135, -0.295, 0.0055], [  -0.5, -0.5, 0.5, 0.5 ]]
-      # #  - [[0.135, -0.295, 0.0055], [ -0.7070814, -0.0059904, 0.7070814, 0.0059904 ]]
-      # #  - [[0.135, -0.295, 0.005], [ -0.7057122, -0.0443882, 0.7057122, 0.0443882 ]]
-      
-      #  - [[-0.135, 0.016, 0.0135], [0.5, 0.5, 0.5, 0.5]] # index3
-      #  - [[-0.135, -0.016, 0.0135], [0.5, 0.5, 0.5, 0.5]]
+      #  - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]] #1116
+      #  - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]] #1116
+      #  - [[0.135, -0.295, 0.0055], [  -0.5, -0.5, 0.5, 0.5 ]]      
+      #  - [[-0.135, 0.015, 0.01], [0.5, 0.5, 0.5, 0.5]] # index3
+      #  - [[-0.135, -0.016, 0.01], [0.5, 0.5, 0.5, 0.5]]
       #  - [[-0.135, -0.295, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
 
-         # 11-28 version with middle(red HC marked)
-       - [[0.135, 0.015, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]] # index0 #1116
-       - [[0.135, -0.015, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]] # index1 #1116
-       - [[0.135, -0.298, 0.012], [  -0.5, -0.5, 0.5, 0.5 ]] # index2
-      
-       - [[-0.135, 0.009, 0.01], [0.5, 0.5, 0.5, 0.5]] # index3
-       - [[-0.135, -0.025, 0.01], [0.5, 0.5, 0.5, 0.5]] # index4
-       - [[-0.135, -0.294, 0.01], [0.5, 0.5, 0.5, 0.5]] # index5   
+         # HC Tuned
+       - [[0.135, 0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+       - [[0.135, -0.016, 0.01], [ -0.5, -0.5, 0.5, 0.5 ]]
+       - [[0.135, -0.295, 0.0055], [  -0.5, -0.5, 0.5, 0.5 ]]      
+       - [[-0.135, 0.0145, 0.01], [0.5, 0.5, 0.5, 0.5]]
+       - [[-0.135, -0.016, 0.01], [0.5, 0.5, 0.5, 0.5]]
+       - [[-0.135, -0.3, 0.0055], [0.5, 0.5, 0.5, 0.5]]      
 
-         # coordinates of bolt holes
-       - [[0.135, 0.0, 0.01], [-0.5, -0.5, 0.5, 0.5]]
-       - [[-0.135, 0.0, 0.01], [ 0.5, 0.5, 0.5, 0.5]]
-      
          # point to mate a zig
        - [[0.135, -0.31, -0.005], [0, 0, 0, 1]]
 
@@ -194,10 +183,10 @@ ikea_stefan_without_bottom:
       # coordinate of bolt holes        
       - [[0.45, 0.858, -0.01535], [ 0.9238795, -0.3826834, 0, 0 ]]   # [-0.3827, 0.9239, 0, 0])
       # - [[0.362, 0.40450, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8   backup [[0.366548, 0.397227, -0.01535], [ 0.3826834, 0.9238795, 0, 0 ]] ##num8
-      - [[0.362, 0.40450, -0.01535], [ 0.7071068, 0.7071068, 0, 0 ]] 
+      - [[0.365, 0.40450, -0.01535], [ 0.7071068, 0.7071068, 0, 0 ]]  #362
       
       # - [[0.0, 0.41050, 0.01535], [ 0.7071068, 0.7071068, 0, 0 ] ] #[ 0, 0, 0.9238795, 0.3826834 ] ] #[ 0, 0, 0.0, 0.1 ]]
-      - [[0.000, 0.41050, 0.023], [ 0.9659249, 0.2588223, 0, 0 ]]
+      - [[0.000, 0.41050, 0.020], [ 0.9238795, 0.3826834, 0, 0 ]]
 
       # bolt hole on the side_right
       # TODO : change the position along z-axis
